fixed anmeldenCard spacing

--- a/app/_component/_themeAble/_card/anmeldenCard/anmeldenCard.css
+++ b/app/_component/_themeAble/_card/anmeldenCard/anmeldenCard.css
@@ -23,7 +23,7 @@ anmelden-card{
     display: flex;
     height: 100%;
     max-width: 100%;
-    padding: 40px;
+    padding: 45px;
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
@@ -41,10 +41,15 @@ note-text{
     white-space: nowrap;
 }
 
+c-textblob{
+    margin-bottom: 15px;
+}
+
 image-container{
     display: block;
     height: 200px;
     flex-grow: 1;
+    margin: 0 5%;
 }
 
 image-box{
@@ -55,26 +60,43 @@ image-box{
     background-size: contain;
 }
 
+content-box{
+    display: block;
+    margin-top: 15px;
+}
+
 content-text{
     font-size: 13px;
 }
 
 c-link{
+    margin-top: 15px;
     font-size: 14px;
 }
 
 @media only screen and (max-width: 1450px) {
-    :host{
+    :host {
         min-width: 450px;
     }
 
+    anmelden-card {
+        padding: 40px;
+    }
 }
 
 
 @media only screen and (max-width:  768px) {
     :host{
         width: 100%;
+        max-width: 100%;
         min-width: unset;
     }
 
+    anmelden-card{
+        padding: 35px;
+    }
+
+    image-container{
+        margin: 0;
+    }
 }
